@@ -2,8 +2,10 @@
 dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tk installation
 dnl	to configure the system for the local environment.
+#
+# RCS: @(#) $Id: configure.in,v 1.64 2001/10/15 21:19:16 hobbs Exp $
+
 AC_INIT(../generic/tk.h)
-# RCS: @(#) $Id: configure.in,v 1.63 2001/08/08 18:41:10 dgp Exp $
 
 TK_VERSION=8.4
 TK_MAJOR_VERSION=8
@@ -11,6 +13,10 @@ TK_MINOR_VERSION=4
 TK_PATCH_LEVEL="a4"
 VERSION=${TK_VERSION}
 LOCALES="de en es fr"
+
+#------------------------------------------------------------------------
+# Handle the --prefix=... option
+#------------------------------------------------------------------------
 
 if test "${prefix}" = "NONE"; then
     prefix=/usr/local
@@ -408,6 +414,14 @@ TK_STUB_LIB_SPEC="-L${exec_prefix}/lib ${TK_STUB_LIB_FLAG}"
 TK_BUILD_STUB_LIB_PATH="`pwd`/${TK_STUB_LIB_FILE}"
 TK_STUB_LIB_PATH="${exec_prefix}/lib/${TK_STUB_LIB_FILE}"
 
+eval "TK_LIB_FILE=${TK_LIB_FILE}"
+
+AC_SUBST(TK_VERSION)
+AC_SUBST(TK_MAJOR_VERSION)
+AC_SUBST(TK_MINOR_VERSION)
+AC_SUBST(TK_PATCH_LEVEL)
+AC_SUBST(TK_DBGX)
+
 AC_SUBST(TK_STUB_LIB_FILE)
 AC_SUBST(TK_STUB_LIB_FLAG)
 AC_SUBST(TK_BUILD_STUB_LIB_SPEC)
@@ -419,8 +433,6 @@ AC_SUBST(TK_STUB_FLAGS)
 AC_SUBST(TK_BUILD_EXP_FILE)
 AC_SUBST(TK_EXP_FILE)
 
-eval "TK_LIB_FILE=${TK_LIB_FILE}"
-
 AC_SUBST(TCL_STUB_FLAGS)
 AC_SUBST(TK_BUILD_EXP_FILE)
 AC_SUBST(TK_EXP_FILE)
@@ -431,7 +443,6 @@ AC_SUBST(CFLAGS_OPTIMIZE)
 AC_SUBST(LDFLAGS_DEFAULT)
 AC_SUBST(LDFLAGS_DEBUG)
 AC_SUBST(LDFLAGS_OPTIMIZE)
-AC_SUBST(TK_DBGX)
 AC_SUBST(DL_LIBS)
 AC_SUBST(EXTRA_CFLAGS)
 AC_SUBST(MATH_LIBS)
@@ -460,11 +471,7 @@ AC_SUBST(TK_LD_SEARCH_FLAGS)
 AC_SUBST(TK_LIB_FILE)
 AC_SUBST(TK_LIB_FLAG)
 AC_SUBST(TK_LIB_SPEC)
-AC_SUBST(TK_MAJOR_VERSION)
-AC_SUBST(TK_MINOR_VERSION)
-AC_SUBST(TK_PATCH_LEVEL)
 AC_SUBST(TK_SRC_DIR)
-AC_SUBST(TK_VERSION)
 AC_SUBST(XINCLUDES)
 AC_SUBST(XLIBSW)
 AC_SUBST(TK_SHARED_BUILD)
